@@ -1,4 +1,0 @@
-Ultima IV - The Quest of the Avatar
-
-Official game data for the famous RPG, freely available at the
-publisher's site; for use by games/xu4.
